responsive design implementation fix-4 heading alignment

--- a/src/style.css
+++ b/src/style.css
@@ -174,7 +174,7 @@ nav {
 	margin-right: 4rem;
 }
 
-#projects {
+#projects, #about {
 	width: 80%;
 }
 
